all velocity macros are defined in macro.vm and all variables are assigned within this file.

--- a/src/main/resources/archetype-resources/spring-cloud-starter-stream-__appType__-__rootArtifactId__/pom.xml
+++ b/src/main/resources/archetype-resources/spring-cloud-starter-stream-__appType__-__rootArtifactId__/pom.xml
@@ -6,8 +6,7 @@
     <artifactId>spring-cloud-starter-stream-${appType}-${rootArtifactId}</artifactId>
     <packaging>jar</packaging>
     <name>spring-cloud-starter-stream-${appType}-${rootArtifactId}</name>
-    <description>Spring Cloud Stream ${rootArtifactId}-${appType} core</description>
-
+    <description>Spring Cloud Stream ${sccAppName}${ccAppType} core</description>
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>${rootArtifactId}-app-starters-build</artifactId>
