--- a/src/main/resources/archetype-resources/__rootArtifactId__-app-dependencies/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-app-dependencies/pom.xml
@@ -2,12 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>org.springframework.cloud.stream.app</groupId>
     <artifactId>${rootArtifactId}-app-dependencies</artifactId>
     <version>${version}</version>
     <packaging>pom</packaging>
     <name>${rootArtifactId}-app-dependencies</name>
-    <description>Spring Cloud Stream ${rootArtifactId}-${appType} Dependencies</description>
+    <description>Spring Cloud Stream ${sccAppName}${ccAppType} dependencies</description>
 
     <parent>
         <artifactId>spring-cloud-dependencies-parent</artifactId>
