--- a/src/main/resources/archetype-resources/spring-cloud-starter-stream-__appType__-__rootArtifactId__/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
+++ b/src/main/resources/archetype-resources/spring-cloud-starter-stream-__appType__-__rootArtifactId__/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
@@ -1,1 +1,1 @@
-configuration-properties.classes=org.springframework.cloud.stream.app.#foreach( $word in $rootArtifactId.split('-') )$word.#end${appType}
+configuration-properties.classes=${groupId}.${packagePath}
