--- a/src/test/resources/projects/it-basic/archetype.properties
+++ b/src/test/resources/projects/it-basic/archetype.properties
@@ -1,5 +1,6 @@
 groupId=org.springframework.cloud.stream.app
 artifactId=foo-bar
+package=org.springframework.cloud.stream.app
 version=2.1.0.RELEASE
 appType=source
 springCloudVersion=2.1.3.RELEASE
