introduced app-starters-build-version and spring-cloud-dependencies-parent-version

--- a/src/main/resources/archetype-resources/__rootArtifactId__-app-dependencies/pom.xml
+++ b/src/main/resources/archetype-resources/__rootArtifactId__-app-dependencies/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>spring-cloud-dependencies-parent</artifactId>
         <groupId>org.springframework.cloud</groupId>
-        <version>${springCloudVersion}</version>
+        <version>${spring-cloud-dependencies-parent-version}</version>
         <relativePath/>
     </parent>
 
