--- a/src/main/resources/archetype-resources/spring-cloud-starter-stream-__appType__-__rootArtifactId__/pom.xml
+++ b/src/main/resources/archetype-resources/spring-cloud-starter-stream-__appType__-__rootArtifactId__/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>${rootArtifactId}-app-starters-build</artifactId>
-        <version>${version}</version>
+        <version>${app-starters-build-version}</version>
     </parent>
 
     <build>
