--- a/src/test/resources/projects/it-basic/archetype.properties
+++ b/src/test/resources/projects/it-basic/archetype.properties
@@ -3,4 +3,5 @@ artifactId=foo-bar
 package=org.springframework.cloud.stream.app
 version=2.1.0.RELEASE
 appType=source
-springCloudVersion=2.1.3.RELEASE
+app-starters-build-version=2.1.0.RELEASE
+spring-cloud-dependencies-parent-version=2.1.3.RELEASE
