--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>app-starters-build</artifactId>
-        <version>${version}</version>
+        <version>${app-starters-build-version}</version>
         <relativePath/>
     </parent>
 
